# hello-worldb72f5d3e-a29d-4138-848b-44d364b45f9f

./: .env.example  README.md  pyproject.toml  schema.prisma
project/: create_documentation_service.py  delete_documentation_service.py  getHelloWorld_service.py  get_api_documentation_service.py  get_hello_world_service.py  helloWorld_service.py  login_user_service.py  register_user_service.py  server.py
